# espinball

./: .gitignore  .refresh_on_new_sources.bash  CMakeLists.txt  Debug_Configuration.launch  Demo.c  Demo.h  FreeRTOSConfig.h  README.md  gfxconf.h  includes.h
Libraries/: FreeRTOS  STM32F4  esptoolchain.cmake  ugfx
Libraries/usr/: ESPL_functions.h  spi_lld.h
code/: game.c  game.h  physics.c  physics.h
include/: gfxconf.h  includes.h
